--- a/views/includes/drawer.ejs
+++ b/views/includes/drawer.ejs
@@ -23,11 +23,10 @@
       <div class="user-data">
         <div class="name">
           <img src="/assets/icons/person.svg" alt="" />
-          <span><%= user.first_name %></span>
+          <span><%= user.first_name + ' ' + user.last_name %></span>
         </div>
         <button id="exit-from-account-drawer-btn">
           <img src="/assets/icons/exit.svg" alt="" />
-          <span>خروج</span>
         </button>
       </div>
       <div class="user-panel">
