--- a/views/user-panel/favorites.ejs
+++ b/views/user-panel/favorites.ejs
@@ -4,22 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>علاقه مندی ها | وبسایت فروشگاهی</title>
-    <link rel="icon" image="x-icon" href="/assets/icons/brand.svg" />
+    <link rel="icon" type="image/x-icon" href="/assets/icons/brand.svg" />
     <link rel="stylesheet" href="/styles/global.css" />
-    <link rel="stylesheet" href="/styles/favorites.css" />
+    <link rel="stylesheet" href="/styles/user-panel/global.css">
+    <link rel="stylesheet" href="/styles/user-panel/favorites.css">
     <link rel="stylesheet" href="/libs/sweetalert2/sweetalert2.min.css" />
   </head>
   <body>
+    <%- include("../includes/drawer", { page: 'favorites', state: 'user-panel' }) %>
     <div class="overlay hidden"></div>
-    <%- include("includes/drawer", { page: 'favorites' }) %>
     <div class="main">
-      <%- include("includes/header", { page: 'favorites' }) %>
+      <%- include("../includes/header", { page: 'favorites' }) %>
       <div class="header-overlay hidden"></div>
       <main>
-        <section class="favorites-list">
-          <h1>لیست علاقه مندی ها • ۵ محصول</h1>
-          <div class="products">
-            <div class="product">
+        <div class="container">
+          <%- include("includes/menu", { page: 'favorites' }) %>
+          <div class="content">
+            <h2>لیست علاقه مندی ها • ۵ محصول</h2>
+            <div class="products">
               <div class="product">
                 <a href="">
                   <div class="image">
@@ -127,9 +129,9 @@
               </div>
             </div>
           </div>
-        </section>
+        </div>
       </main>
-      <%- include("includes/footer") %>
+      <%- include("../includes/footer") %>
     </div>
     <script src="/libs/sweetalert2/sweetalert2.all.min.js"></script>
     <script src="/scripts/global.js"></script>
