--- a/public/styles/user-panel/change-info.css
+++ b/public/styles/user-panel/change-info.css
@@ -56,3 +56,16 @@
   width: 100%;
   padding: 10px 15px;
 }
+
+@media screen and (max-width: 768px) {
+  .main main .container .content {
+    flex-direction: column;
+  }
+  .main main .container .content > div {
+    width: 100%;
+  }
+  .main main .container .content > div form .inputs .input .box {
+    padding: 10px;
+    width: 100%;
+  }
+}
