--- a/views/user-panel/includes/menu.ejs
+++ b/views/user-panel/includes/menu.ejs
@@ -13,19 +13,19 @@
       <img src="/assets/icons/house.svg" alt="" />
       <span>داشبورد</span>
     </a>
-    <a href="#orders" class="<%= page == 'orders' ? 'on' : '' %>">
+    <a href="/user/orders" class="<%= page == 'orders' ? 'on' : '' %>">
       <img src="/assets/icons/order.svg" alt="" />
       <span>سفارشات</span>
     </a>
-    <a href="#cart" class="<%= page == 'cart' ? 'on' : '' %>">
+    <a href="/user/cart" class="<%= page == 'cart' ? 'on' : '' %>">
       <img src="/assets/icons/cart.svg" alt="" />
       <span>سبد خرید</span>
     </a>
-    <a href="#favorites" class="<%= page == 'favorites' ? 'on' : '' %>">
+    <a href="/user/favorites" class="<%= page == 'favorites' ? 'on' : '' %>">
       <img src="/assets/icons/heart.svg" alt="" />
       <span>علاقه مندی ها</span>
     </a>
-    <a href="#change-info" class="<%= page == 'change-info' ? 'on' : '' %>">
+    <a href="/user/change-info" class="<%= page == 'change-info' ? 'on' : '' %>">
       <img src="/assets/icons/pencil.svg" alt="">
       <span>تغییر مشخصات</span>
     </a>
